--- a/apps/ui-tars/package.json
+++ b/apps/ui-tars/package.json
@@ -65,7 +65,8 @@
   },
   "dependencies": {
     "@computer-use/node-mac-permissions": "2.2.2",
-    "sharp": "0.33.3"
+    "sharp": "0.33.3",
+    "uiohook-napi": "^1.5.4"
   },
   "devDependencies": {
     "@common/electron-build": "workspace:*",
@@ -89,14 +90,15 @@
     "@electron-toolkit/utils": "^3.0.0",
     "@electron/asar": "^3.2.18",
     "@electron/fuses": "^1.8.0",
+    "@tailwindcss/vite": "4.1.3",
     "@trivago/prettier-plugin-sort-imports": "^5.2.1",
     "@types/node": "^20.14.8",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@ui-tars/action-parser": "workspace:*",
     "@ui-tars/electron-ipc": "workspace:*",
-    "@ui-tars/operator-nut-js": "workspace:*",
     "@ui-tars/operator-browser": "workspace:*",
+    "@ui-tars/operator-nut-js": "workspace:*",
     "@ui-tars/sdk": "workspace:*",
     "@ui-tars/shared": "workspace:*",
     "@ui-tars/utio": "workspace:*",
@@ -120,6 +122,7 @@
     "prettier": "^3.3.2",
     "rimraf": "^6.0.1",
     "sass-embedded": "^1.83.1",
+    "tailwindcss": "4.1.3",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
@@ -127,9 +130,7 @@
     "vite": "^6.1.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.8",
-    "zustand": "^5.0.0",
-    "@tailwindcss/vite": "4.1.3",
-    "tailwindcss": "4.1.3"
+    "zustand": "^5.0.0"
   },
   "engines": {
     "node": ">=20.x"
